widget_derive/tests/ui/declare/circular_dependency_fail.stderr
error: Can't init widget because circle follow: id1.size ～> id2 , id2.size ～> id3 , id3.size ～> id1
  --> tests/ui/declare/circular_dependency_fail.rs:9:13
   |
9  |         id: id1,
   |             ^^^
10 |         size: id2.size,
   |         ^^^^  ^^^
...
13 |         id: id2,
   |             ^^^
14 |         size: id3.size,
   |         ^^^^  ^^^
...
17 |         id: id3,
   |             ^^^
18 |         size: id1.size,
   |         ^^^^  ^^^
   |
note: If the circular is your want and will finally not infinite change,you should break the init circle and declare some follow relationship in `data_flow`, and remember use `#[skip_nc]` attribute to skip the no change trigger of the field modifyto ignore infinite state change trigger.
  --> tests/ui/declare/circular_dependency_fail.rs:10:9
   |
10 |         size: id2.size,
   |         ^^^^
...
14 |         size: id3.size,
   |         ^^^^
...
18 |         size: id1.size,
   |         ^^^^

error: Can't init widget because circle follow: child.margin ～> parent , parent.margin ～> child
  --> tests/ui/declare/circular_dependency_fail.rs:28:11
   |
28 |       id: parent,
   |           ^^^^^^
29 |       size: Size::zero(),
30 |       margin: child.margin.clone(),
   |       ^^^^^^  ^^^^^^^^^^^^
31 |       SizedBox{
32 |         id: child,
   |             ^^^^^
33 |         size: Size::zero(),
34 |         margin: parent.margin.clone(),
   |         ^^^^^^  ^^^^^^^^^^^^^
   |
note: If the circular is your want and will finally not infinite change,you should break the init circle and declare some follow relationship in `data_flow`, and remember use `#[skip_nc]` attribute to skip the no change trigger of the field modifyto ignore infinite state change trigger.
  --> tests/ui/declare/circular_dependency_fail.rs:30:7
   |
30 |       margin: child.margin.clone(),
   |       ^^^^^^
...
34 |         margin: parent.margin.clone(),
   |         ^^^^^^

error: Circle follow will cause infinite state change trigger: a ～> a
  --> tests/ui/declare/circular_dependency_fail.rs:47:17
   |
47 |     dataflows { a.size ~> a.size }
   |                 ^         ^
   |
note: If the circular is your want, use `#[skip_nc]` attribute before field or data_flow to skip the no change trigger of the field modify to ignore infinite state change trigger.
  --> tests/ui/declare/circular_dependency_fail.rs:47:17
   |
47 |     dataflows { a.size ~> a.size }
   |                 ^^^^^^^^^^^
